Animated character and more Capacities for AI

--- a/MashupJam/Assembly-CSharp.csproj
+++ b/MashupJam/Assembly-CSharp.csproj
@@ -51,11 +51,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\#Camera\FollowCameraController2D.cs" />
+     <Compile Include="Assets\Scripts\#Patterns\MonoBehaviourSingleton.cs" />
      <Compile Include="Assets\Scripts\Behaviours\DumbEnnemyBehaviour.cs" />
      <Compile Include="Assets\Scripts\Behaviours\DumbFlyingEnnemyBehaviour.cs" />
      <Compile Include="Assets\Scripts\Behaviours\EnnemyBehaviour.cs" />
      <Compile Include="Assets\Scripts\Behaviours\KidBehaviour.cs" />
      <Compile Include="Assets\Scripts\Behaviours\LivingBehaviour.cs" />
+     <Compile Include="Assets\Scripts\Behaviours\ProjectileBehaviour.cs" />
      <Compile Include="Assets\Scripts\Behaviours\WanderEnnemyBehaviour.cs" />
      <Compile Include="Assets\Scripts\BreakableHealth.cs" />
      <Compile Include="Assets\Scripts\DamagingZone.cs" />
