--- a/MashupJam/Assembly-CSharp.csproj
+++ b/MashupJam/Assembly-CSharp.csproj
@@ -591,6 +591,7 @@
      <Compile Include="Assets\Scripts\health UI\Rules.cs" />
      <Compile Include="Assets\Scripts\Interactable.cs" />
      <Compile Include="Assets\Scripts\KidHealth.cs" />
+     <Compile Include="Assets\Scripts\LevelGenerator.cs" />
      <Compile Include="Assets\Scripts\LevelManager.cs" />
      <Compile Include="Assets\Scripts\LivingHealth.cs" />
      <Compile Include="Assets\Scripts\MusicPlayer.cs" />
